[MAJOR Update] The step order is defined by the order of definition in the .ini
Change-Id: I7d0a196ec2864f9c15d2b1bf87e7470490386f63
Reviewed-on: http://gerrit.aldebaran.lan/81359
Reviewed-by: rtaprest <rtaprest@aldebaran.com>
Tested-by: amartin <amartin@aldebaran.com>

--- a/testing/loop_feature/tests/loop_different_tests.ini
+++ b/testing/loop_feature/tests/loop_different_tests.ini
@@ -3,17 +3,13 @@ test_name=loop different tests
 executed_tests=1,2,3,2,3,2,3,2,3,4
 
 [test_info]
-loop_tests=(20, 30)
+loop_tests=test_2|test_3
 loop_iter=4
 
 [test_1]
-test_order=10
 
 [test_2]
-test_order=20
 
 [test_3]
-test_order=30
 
 [test_4]
-test_order=40
