--- a/testing/loop_feature/actions/loop_different_actions.ini
+++ b/testing/loop_feature/actions/loop_different_actions.ini
@@ -3,18 +3,14 @@ test_name=loop different actions
 executed_tests=1,2,3,2,3,2,3,2,3,4
 
 [test_info]
-loop_tests=(20, 30)
+loop_tests=action_2|action_3
 loop_iter=4
 
 [action_1]
-test_order=10
 post_fail=test_3
 
 [action_2]
-test_order=20
 
 [action_3]
-test_order=30
 
 [action_4]
-test_order=40
