--- a/testing/loop_feature/actions/loop_mixed_actions.ini
+++ b/testing/loop_feature/actions/loop_mixed_actions.ini
@@ -3,17 +3,13 @@ test_name=loop mixed actions
 executed_tests=1,2,1,1,2,1,3
 
 [test_info]
-loop_tests=(10, 30)
+loop_tests=action_1_0|action_1_1
 loop_iter=2
 
 [action_1_0]
-test_order=10
 
 [action_2]
-test_order=20
 
 [action_1_1]
-test_order=30
 
 [action_3]
-test_order = 40
