--- a/testing/loop_feature/tests/loop_mixed_tests.ini
+++ b/testing/loop_feature/tests/loop_mixed_tests.ini
@@ -3,20 +3,15 @@ test_name=loop mixed tests
 executed_tests=2,1,2,1,1,2,1,3
 
 [test_info]
-loop_tests=(10, 30)
+loop_tests=test_1_0|test_1_1
 loop_iter=2
 
 [test_2_0]
-test_order=5
 
 [test_1_0]
-test_order=10
 
 [test_2_1]
-test_order=20
 
 [test_1_1]
-test_order=30
 
 [test_3]
-test_order = 40
