Allowed section with same name in configuration file

--- a/testing/cache_feature/actions/cache_loop_different_action.ini
+++ b/testing/cache_feature/actions/cache_loop_different_action.ini
@@ -4,11 +4,11 @@ executed_tests=1,1,0,1,0
 rerun_tests=1,0,1,0
 
 [test_info]
-loop_tests=action_1_1|action_loop_fail_second_call
+loop_tests=action_1-1|action_loop_fail_second_call
 loop_iter=2
 
-[action_1_0]
+[action_1]
 
-[action_1_1]
+[action_1]
 
 [action_loop_fail_second_call]
