--- a/testing/cache_feature/actions/cache_uut_same_action.ini
+++ b/testing/cache_feature/actions/cache_uut_same_action.ini
@@ -3,12 +3,12 @@ test_name=cache uut same test
 executed_tests=1,1,1,1,1
 rerun_tests=1,1
 
-[action_1_uut_0]
+[action_1_uut]
 uut=-a|b|-c
 
-[action_1_uut_1]
+[action_1_uut]
 result=Fail
 uut=-a|b
 
-[action_1_uut_2]
+[action_1_uut]
 uut=-a|b
