--- a/testing/cache_feature/tests/cache_loop_different_test.ini
+++ b/testing/cache_feature/tests/cache_loop_different_test.ini
@@ -4,11 +4,11 @@ executed_tests=1,1,0,1,0
 rerun_tests=1,0,1,0
 
 [test_info]
-loop_tests=test_1_1|test_loop_fail_second_call
+loop_tests=test_1-1|test_loop_fail_second_call
 loop_iter=2
 
-[test_1_0]
+[test_1-0]
 
-[test_1_1]
+[test_1-1]
 
 [test_loop_fail_second_call]
