--- a/testing/cache_feature/tests/cache_loop_uut_same_test.ini
+++ b/testing/cache_feature/tests/cache_loop_uut_same_test.ini
@@ -4,15 +4,15 @@ executed_tests=1,1,1,1,1
 rerun_tests=1,1,1,1
 
 [test_info]
-loop_tests=test_1_uut_0|test_1_uut_1
+loop_tests=test_1_uut-0|test_1_uut-1
 loop_iter=2
 
 [test_1]
 
-[test_1_uut_0]
+[test_1_uut-0]
 uut=b|c
 
-[test_1_uut_1]
+[test_1_uut-1]
 uut=b|d
 result=Fail
 
