--- a/testing/cache_feature/tests/cache_uut_same_test.ini
+++ b/testing/cache_feature/tests/cache_uut_same_test.ini
@@ -3,12 +3,12 @@ test_name=cache uut same test
 executed_tests=1,1,1,1,1
 rerun_tests=1,1
 
-[test_1_uut_0]
+[test_1_uut-0]
 uut=-a|b|-c
 
-[test_1_uut_1]
+[test_1_uut-1]
 result=Fail
 uut=-a|b
 
-[test_1_uut_2]
+[test_1_uut-2]
 uut=-a|b
