--- a/testing/loop_feature/actions/loop_same_action.ini
+++ b/testing/loop_feature/actions/loop_same_action.ini
@@ -3,13 +3,13 @@ test_name=loop same action
 executed_tests=1,2,2,2,2,2,2,2,2,3
 
 [test_info]
-loop_tests=action_2_0|action_2_1
+loop_tests=action_2-0|action_2-1
 loop_iter=4
 
 [action_1]
 
-[action_2_0]
+[action_2]
 
-[action_2_1]
+[action_2]
 
 [action_3]
