--- a/testing/loop_feature/tests/loop_same_test.ini
+++ b/testing/loop_feature/tests/loop_same_test.ini
@@ -3,13 +3,13 @@ test_name=loop same test
 executed_tests=1,2,2,2,2,2,2,2,2,3
 
 [test_info]
-loop_tests=test_2_0|test_2_1
+loop_tests=test_2-0|test_2-1
 loop_iter=4
 
 [test_1]
 
-[test_2_0]
+[test_2-0]
 
-[test_2_1]
+[test_2-1]
 
 [test_3]
