--- a/testing/postfail_feature/actions/postfail_next_step_same_action.ini
+++ b/testing/postfail_feature/actions/postfail_next_step_same_action.ini
@@ -2,12 +2,12 @@
 test_name=postfail next step
 executed_tests=1,1,1,1
 
-[action_1_0]
+[action_1]
 result=fail
 post_fail=next_step
 
-[action_1_1]
+[action_1]
 
-[action_1_2]
+[action_1]
 
-[action_1_3]
+[action_1]
