--- a/testing/postfail_feature/actions/postfail_other_action_same_action.ini
+++ b/testing/postfail_feature/actions/postfail_other_action_same_action.ini
@@ -2,13 +2,13 @@
 test_name=postfail other action
 executed_tests=1,1
 
-[action_1_0]
+[action_1]
 result=Fail
-post_fail=action_1_3
+post_fail=action_1-3
 
-[action_1_1]
+[action_1]
 
-[action_1_2]
+[action_1]
 
-[action_1_3]
+[action_1]
 
