--- a/testing/postfail_feature/tests/postfail_next_step_same_test.ini
+++ b/testing/postfail_feature/tests/postfail_next_step_same_test.ini
@@ -2,12 +2,12 @@
 test_name=postfail next step
 executed_tests=1,1,1,1
 
-[test_1_0]
+[test_1]
 result=fail
 post_fail=next_step
 
-[test_1_1]
+[test_1]
 
-[test_1_2]
+[test_1]
 
-[test_1_3]
+[test_1]
