--- a/testing/postfail_feature/tests/postfail_other_test_same_test.ini
+++ b/testing/postfail_feature/tests/postfail_other_test_same_test.ini
@@ -2,13 +2,13 @@
 test_name=postfail other test
 executed_tests=1,1
 
-[test_1_0]
+[test_1-0]
 result=Fail
-post_fail=test_1_3
+post_fail=test_1-3
 
-[test_1_1]
+[test_1-1]
 
-[test_1_2]
+[test_1-2]
 
-[test_1_3]
+[test_1-3]
 
