--- a/testing/postfail_feature/tests/postfail_skip_all_test_same_test.ini
+++ b/testing/postfail_feature/tests/postfail_skip_all_test_same_test.ini
@@ -2,11 +2,11 @@
 test_name=postfail skip all
 executed_tests=1,1
 
-[test_1_0]
+[test_1]
 
-[test_1_1]
+[test_1]
 result=Fail
 
-[test_1_2]
+[test_1]
 
-[test_1_3]
+[test_1]
