--- a/testing/uut2_feature/actions/uut2_same_action.ini
+++ b/testing/uut2_feature/actions/uut2_same_action.ini
@@ -2,11 +2,11 @@
 test_name=uut2 same action
 executed_tests=1,1,1,1,1,1,1,1
 
-[action_1_uut2_0]
+[action_1_uut2]
 uut=-a|b|-c
 uut2=-x|y
 
-[action_1_uut2_1]
+[action_1_uut2]
 result=Fail
 uut=a|-b
 uut2=-x
