--- a/testing/uut_feature/actions/uut_same_action.ini
+++ b/testing/uut_feature/actions/uut_same_action.ini
@@ -2,9 +2,9 @@
 test_name=uut same action
 executed_tests=1,1,1,1,1
 
-[action_1_uut_0]
+[action_1_uut]
 uut=-a|b|-c
 
-[action_1_uut_1]
+[action_1_uut]
 result=Fail
 uut=-a|b
