--- a/testing/uut_feature/tests/uut_same_test.ini
+++ b/testing/uut_feature/tests/uut_same_test.ini
@@ -2,9 +2,9 @@
 test_name=uut same test
 executed_tests=1,1,1,1,1
 
-[test_1_uut_0]
+[test_1_uut]
 uut=-a|b|-c
 
-[test_1_uut_1]
+[test_1_uut]
 result=Fail
 uut=-a|b
