--- a/testing/loop_feature/actions/loop_mixed_actions.ini
+++ b/testing/loop_feature/actions/loop_mixed_actions.ini
@@ -3,13 +3,13 @@ test_name=loop mixed actions
 executed_tests=1,2,1,1,2,1,3
 
 [test_info]
-loop_tests=action_1_0|action_1_1
+loop_tests=action_1-0|action_1-1
 loop_iter=2
 
-[action_1_0]
+[action_1]
 
 [action_2]
 
-[action_1_1]
+[action_1]
 
 [action_3]
