--- a/testing/loop_feature/tests/loop_fail_second_iteration.ini
+++ b/testing/loop_feature/tests/loop_fail_second_iteration.ini
@@ -3,11 +3,11 @@ test_name=loop fail second iteration test
 executed_tests=1,0,1,1,0
 
 [test_info]
-loop_tests=test_1_0|test_1_1
+loop_tests=test_1-0|test_1-1
 loop_iter=3
 
-[test_1_0]
+[test_1-0]
 
 [test_loop_fail_second_call]
 
-[test_1_1]
+[test_1-1]
