--- a/testing/loop_feature/tests/loop_mixed_tests.ini
+++ b/testing/loop_feature/tests/loop_mixed_tests.ini
@@ -3,15 +3,15 @@ test_name=loop mixed tests
 executed_tests=2,1,2,1,1,2,1,3
 
 [test_info]
-loop_tests=test_1_0|test_1_1
+loop_tests=test_1-0|test_1-1
 loop_iter=2
 
-[test_2_0]
+[test_2-0]
 
-[test_1_0]
+[test_1-0]
 
-[test_2_1]
+[test_2-1]
 
-[test_1_1]
+[test_1-1]
 
 [test_3]
