--- a/testing/loop_feature/tests/loop_same_test_uut.ini
+++ b/testing/loop_feature/tests/loop_same_test_uut.ini
@@ -3,15 +3,15 @@ test_name=uut same test
 executed_tests=1,1,1,1,1,1,1,1,1,2
 
 [test_info]
-loop_tests=test_1_uut_0|test_1_uut_1
+loop_tests=test_1_uut-0|test_1_uut-1
 loop_iter=2
 
 [test_1]
 
-[test_1_uut_0]
+[test_1_uut-0]
 uut=b|c
 
-[test_1_uut_1]
+[test_1_uut-1]
 uut=b|d
 
 [test_2]
