--- a/testing/postfail_feature/actions/postfail_skip_all_action_same_action.ini
+++ b/testing/postfail_feature/actions/postfail_skip_all_action_same_action.ini
@@ -2,11 +2,11 @@
 test_name=postfail skip all
 executed_tests=1,1
 
-[action_1_0]
+[action_1]
 
-[action_1_1]
+[action_1]
 result=Fail
 
-[action_1_2]
+[action_1]
 
-[action_1_3]
+[action_1]
