--- a/testing/postfail_feature/tests/postfail_fixture_teardown_fail.ini
+++ b/testing/postfail_feature/tests/postfail_fixture_teardown_fail.ini
@@ -2,18 +2,18 @@
 test_name=postfail next step
 executed_tests=1,3
 
-[test_teardown_fixture_0]
+[test_teardown_fixture]
 post_fail=next_step
 
 [test_1]
 
-[test_teardown_fixture_1]
+[test_teardown_fixture]
 post_fail=test_3
 
 [test_2]
 
 [test_3]
 
-[test_teardown_fixture_2]
+[test_teardown_fixture]
 
 [test_4]
