--- a/testing/uut2_feature/tests/uut2_same_test.ini
+++ b/testing/uut2_feature/tests/uut2_same_test.ini
@@ -2,11 +2,11 @@
 test_name=uut2 same test
 executed_tests=1,1,1,1,1,1,1,1
 
-[test_1_uut2_0]
+[test_1_uut2]
 uut=-a|b|-c
 uut2=-x|y
 
-[test_1_uut2_1]
+[test_1_uut2]
 result=Fail
 uut=a|-b
 uut2=x
