--- a/setup.cfg
+++ b/setup.cfg
@@ -1,4 +1,4 @@
 [tool:pytest]
-addopts = --tb=line -v
+addopts = --tb=line -v --cov-append --cov=wooqi --cov-report=term --cov-report=html --cov-report=xml:coverage.xml
 python_files=actions_*.py test_*.py
 python_functions=action_* test_*
